--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -3511,6 +3511,7 @@
     }
    ],
    "source": [
+    "# # Composite plot to contrast the Elbow curves\n",
     "# pca K\n",
     "pca_k = df_elbow_pca.hvplot.line(rot=90, title = \"PCA\").opts(yformatter='%.0f')\n",
     "\n",
